--- a/carp-commerce/carp-commerce-service-impl/pom.xml
+++ b/carp-commerce/carp-commerce-service-impl/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <artifactId>carp-commerce</artifactId>
     <groupId>org.lotus.carp</groupId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>org.lotus.carp</groupId>
   <artifactId>carp-commerce-service-impl</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.2.0</version>
   <packaging>jar</packaging>
 
   <name>carp-commerce-service-impl</name>
